<resources>
    <string name="app_name">护机宝</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="activitymovetime">500</string>
    <string-array name="company">
        <item>中国移动</item>
        <item>中国联通</item>
        <item>中国电信</item>
    </string-array>
    <string name="title_activity_login">登录</string>
    <string name="error_invalid_password">密码长度不少于6位</string>
    <string name="error_invalid_password_different">两次密码不相同</string>
    <string name="error_incorrect_password">用户名密码不正确</string>
    <string name="error_field_required">此处不能为空</string>
    <string name="input_pwd">请输入密码</string>
    <string name="dialog_enter_pwd">设置密码</string>
    <string name="error_pwd">密码错误</string>
    <string name="error_pwd_different">两次密码不相同，请重新输入</string>
    <string name="pwd_modify_succeed">修改成功</string>
    <string name="dialg_default_message">Developed By Mr Yang!</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="title_phone_lost_protector">手机防盗</string>
    <string name="phone_lost_protector_title_current_set">当前设置</string>
    <string name="phone_lost_protector_title_current_state">当前状态</string>
    <string name="phone_lost_protector_title_current_state_open">开启(点击轮盘关闭)</string>
    <string name="phone_lost_protector_title_current_state_close">关闭(点击轮盘关闭)</string>
    <string name="phone_lost_protector_title_SIM_changed">换卡短信通知</string>
    <string name="phone_lost_protector_title_SIM_changed_note">手机更换sim卡后安全号码回家收到一条短信通知</string>
    <string name="phone_lost_protector_title_item_delete">远程删除手机数据(app需要设备管理权限)</string>
    <string name="phone_lost_protector_note_item_delete">安全号码可发送指定短信内容到该手机用于格式化手机</string>
    <string name="phone_lost_protector_title_lock">远程锁定手机(app需要设备管理者权限)</string>
    <string name="phone_lost_protector_note_lock">安全号码可发送指定短信用于锁定该手机</string>
    <string name="phone_lost_protector_title_ring">响铃警报</string>
    <string name="phone_lost_protector_note_ring">安全号码发送指定短信用于手机响铃</string>
    <string name="phone_lost_protector_title_lock_pwd">远程改密(app需要设备管理者权限)</string>
    <string name="phone_lost_protector_note_lock_pwd">安全号码发送指定短信用于修改手机密码</string>
    <string name="phone_lost_protector_title_location">位置追踪</string>
    <string name="phone_lost_protector_note_location">安全号码发送指定短信用户获取手机位置</string>
    <string name="toast_no_sim">当前未插入SMS卡</string>
    <string name="dialog_title_set_protect_number">设置保护号码</string>
    <string name="dialog_message_toprotector">是否设置号码%s为保护号码？</string>
    <string name="dialog_button_ok_set_number">设置该号码</string>
    <string name="dialog_button_cancle_setpout">跳过</string>
    <string name="dialog_title_set_numbers">设置号码</string>
    <string name="dialog_edittext_hine_user_number">请输入要监测的号码</string>
    <string name="dialog_edittext_hine_safe_number">请输入安全号码</string>
    <string name="error_number_can_not_null">号码不能为空</string>
    <string name="number_modify_succeed">修改成功</string>
    <string name="title_communication_protector">通讯卫士</string>
    <string name="title_communication_protector_set">拦截设置</string>
    <string name="toast_closed_night_mode">已关闭夜间免打扰模式!</string>
    <string name="dialog_title_night_mode">夜间模式</string>
    <string name="toast_error_time_format_error">时间格式不对</string>
    <string name="toast_opened_night_mode">已开启夜间免打扰模式！</string>
    <string name="title_communication_protector_set_additionnal_function">附加功能</string>
    <string name="title_communication_protector_white_black_number_set">黑白名单设置</string>
    <string name="title_communication_protector_number_query">号码归属地查询</string>
    <string name="toast_error_can_not_find_number_place">抱歉，无法查询到该号码信息</string>
    <string name="title_flows_calibration">流量校准</string>
    <string name="title_flows_protector">流量监控、</string>
    <string name="title_flows_statistic">流量分析</string>
    <string name="title_app_manager">软件管理</string>
    <string name="title_system_quick">系统加速</string>
    <string name="title_data_backup">数据备份</string>
    <string name="menu_local">本地</string>
    <string name="menu_net">网络</string>
    <string name="menu_backup">未备份</string>
    <string name="menu_recovery">未还原</string>
    <string name="title_protocol">App说明</string>
    <string name="button_enter_app">进入程序</string>
    <string name="main_fragment_note_phone_lost_in_protecting">手机保护中</string>
    <string name="main_fragment_note_flows_in_protecting">流量监控中</string>
    <string name="button_log_in">登录</string>
    <string name="button_log_out">注销</string>
    <string name="dialog_title_active_device_admin">激活设备管理员</string>
    <string name="dialog_message_active_device_admin">激活App设备管理权限？</string>
    <string name="button_go_now">现在就去</string>
    <string name="button_un_go">不去了</string>
    <string name="phone_lost_message_body_delete_ok">目标手机正在重置！</string>
    <string name="error_no_device_admin">软件没有设备管理权限</string>
    <string name="phone_lost_message_body_delete_error">重置失败：手机没有开启重置功能！</string>
    <string name="phone_lost_message_body_lock_ok">目标手机正在锁屏，锁屏密码是:</string>
    <string name="phone_lost_message_body_lock_error">锁屏失败：手机没有开启锁频功能！</string>
    <string name="phone_lost_message_body_ring_error">\"响铃操作未被程序允许\"</string>
    <string name="phone_lost_message_body_change_pwd_ok">修改密码成功，密码是：</string>
    <string name="phone_lost_message_body_change_pwd_error">远程改密操作未被允许</string>
    <string name="phone_lost_message_body_location_error">定位操作未被程序允许</string>
    <string name="phone_lost_protector_succeed_to_unregist_device_admin">取消激活成功</string>
    <string name="dialog_title_choose_operator">选择运营商</string>
    <string name="dialog_title_input_remaind_flows">剩余流量</string>
    <string name="toast_error_invalid_input">输入的数据不合法！</string>
    <string name="dialog_title_total_flows">套餐内总流量</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="button_to_regist">新用户注册</string>
    <string name="button_forgot_password">忘记密码？</string>
    <string name="title_log_in">用户登录</string>
    <string name="button_log_in_doing">正在登陆</string>
    <string name="error_JSON_parse">json数据解析错误</string>
    <string name="error_log_in">登录失败！</string>
    <string name="error_fail_to_connect_server">连接服务器失败</string>
    <string name="title_regist">注册</string>
    <string name="toast_error_no_more_data">已经木有数据了</string>
    <string name="toast_loading">正在加载中...</string>
    <string name="toast_un_log_in">您还未登录</string>
    <string name="backup_pupup_item_backup">备份</string>
    <string name="backup_pupup_item_back_msg">回复短信</string>
    <string name="backup_pupup_item_back_call">回拨电话</string>
    <string name="toast_error_unknow">备份失败:未知错误！</string>
    <string name="backup_pupup_item_recovery">恢复到本机</string>
    <string name="backup_pupup_item_delete">删除</string>
    <string name="backup_pupup_item_backup_cloud">备份到云端</string>
    <string name="toast_error_fail_to_load_img">加载图片失败！</string>
    <string name="toast_error_fail_to_save_img">图片保存失败</string>
    <string name="dialog_input_pwd">验证密码</string>
    <string name="notification_flows_warning_1_simple_message">您的流量已不足</string>
    <string name="notification_flows_warning_title">流量警告</string>
    <string name="notification_flows_warning_1_message">M,请谨慎使用</string>
    <string name="notification_flows_warning_2_simple_message">您当前的流量已用完</string>
    <string name="notification_flows_warning_2_message">护机宝监测到您的流量已用完，请及时查询！</string>
    <string name="communication_interceptor_note_black_list">(黑名单):</string>
    <string name="communication_interceptor_note_white_list">(白名单)：</string>
    <string name="communication_interceptor_note_normal_list">(普通):</string>
    <string name="dialog_title_normal_tip">护机宝提示</string>
    <string name="dialog_message_sure_to_del_msg">确定要删除该条信息吗？</string>
    <string name="dialog_message_sure_to_recovery_msg">确定要恢复该条数据到信息里吗？</string>
    <string name="error_number_can_not_empty">号码不能为空</string>
    <string name="error_number_format">电话号码格式有误</string>
    <string name="toast_succeed_to_add_white_list">号码\"%s已添加到白名单中</string>
    <string name="toast_fail_to_add_white_list">添加失败，可能号码%s已经在黑白名单中</string>
    <string name="toast_succeed_to_add_black_list">号码%s已添加到黑名单中</string>
    <string name="toast_fail_to_add_black_list">添加失败，可能号码%s已经在黑白白名单中</string>
    <string name="dialog_del">删除</string>
    <string name="dialog_recovery">恢复</string>
    <string name="dialog_back_message_to">给%s回短信</string>
    <string name="dialog_back_call_to">给%s回电话</string>
    <string name="dialog_set_to_white_list">设置%s到白名单</string>
    <string name="dialog_set_to_black_list">设置%s到黑名单</string>
    <string name="dialog_cancle">取消</string>
    <string name="toast_del_succeed">删除完成</string>
    <string name="toast_del_fail">删除失败，请重试！</string>
    <string name="toast_succeed_to_recovery_msg">短信已经恢复到短信列表</string>
    <string name="toast_fail_to_recovery_msg">恢复失败，请重试！</string>
    <string name="dialog_title_add_white_list">添加白名单</string>
    <string name="dialog_title_add_black_list">添加黑名单</string>
    <string name="dialog_message_sure_to_del_call">确定要删除该条通话记录吗？</string>
    <string name="dialog_message_sure_to_call_to">确定要给号码%s回拨电话吗？</string>
    <string name="dialog_callback">回拨</string>
    <string name="dialog_edit">编辑</string>
    <string name="dialog_change_to_white_list">更改%s为白名单</string>
    <string name="toast_modify_succeed">修改成功</string>
    <string name="toast_modify_fail">修改失败：未知原因</string>
    <string name="toast_add_succeed">添加成功</string>
    <string name="toast_add_fail">添加失败,号码%s可能已在黑白名单表中</string>
    <string name="dialog_message_sure_to_del_black_list">确定要删除该黑名单吗？</string>
    <string name="dialog_title_edit_black_list">编辑黑名单</string>
    <string name="dialog_title_more">更多</string>
    <string name="dialog_title_edit_white_list">编辑白名单</string>
    <string name="dialog_message_sure_to_del_white_list">确定要删除该白名单吗？</string>
    <string name="dialog_message_no_app_selected">您没有选择要卸载的程序！</string>
    <string name="dialog_message_sure_to_uninstall">确定要卸载%s吗?</string>
    <string name="toast_succeed_to_uninstall">%s已成功被移除！</string>
    <string name="toast_error_no_root">护机宝没有取得root权限，无法使用防火墙功能！</string>
    <string name="dialog_title_setting_network">正在设置防火墙</string>
    <string name="system_quick_total_inner_memroy">总内存:%.2fG</string>
    <string name="system_quick_total_read_only_memory">内部存储:</string>
    <string name="system_quick_inner_rubbish_scanning">正在扫描内存垃圾</string>
    <string name="system_quick_item_inner_memory_rubbish">内存垃圾</string>
    <string name="system_quick_inner_memory_cleaning">正在清理内存垃圾</string>
    <string name="system_quick_cache_cleaning">正在清理缓存垃圾</string>
    <string name="system_quick_cache_scanning">正在扫描缓存垃圾</string>
    <string name="system_quick_item_cache">应用缓存垃圾</string>
    <string name="system_quick_clean_over">清理完成</string>
    <string name="app_manager_app_manager">软件管理</string>
    <string name="app_manager_net_manager">网络管理</string>
    <string name="title_communication_protector_message_interception">短信拦截</string>
    <string name="title_communication_protector_call_interception">电话拦截</string>
    <string name="title_communication_protector_white_list">白名单</string>
    <string name="password_again">确认密码</string>
    <string name="phone_number">手机号码</string>
    <string name="back_to_log_in">返回登录</string>
    <string name="application">应用</string>
    <string name="upload">上传</string>
    <string name="download">下载</string>
    <string name="total">总计</string>
    <string name="share_text_android_app_code">android App源码</string>
    <string name="share_url_android_app_code">https://github.com/yangzhiqian/safe</string>
    <string name="share_text_web_server_code">服务器端源码</string>
    <string name="share_url_web_server_code">https://github.com/yangzhiqian/safe_server</string>
    <string name="share_text_coder_email">开发者邮箱</string>
    <string name="share_content_coder_email">936810097@qq.com</string>
</resources>